--- a/css/index.css
+++ b/css/index.css
@@ -17,30 +17,34 @@ body{
   font-size:1.6rem;line-height:1.6em;font-weight:400;font-style:normal;letter-spacing:0;
   line-height:1}
 
+
 /* header */
 .header-with-background {
-  background-color: rgb(91, 70, 129);
-}
+  background-color: rgb(0, 0, 0);
+  padding-left: 1em;}
+
+.site-nav{
+  display: flex;
+  padding-bottom: -1em;}
 
 .site-nav-left{
-  background-color: rgb(255, 255, 255);}
+  /*background-color: rgb(252, 201, 214);*/
+  flex: 9;}
+.site-nav-right{
+  /*background-color: rgb(196, 144, 164);*/
+  flex: 1;}
 
-/*left*/
-.site-nav div {
-  display: inline;}
-
+/* left */
 .nav{
-    overflow: hidden;
-    padding: 0rem}
+  overflow: hidden;
+  padding: 0rem}
 
 .nav li {
-  /*background: rgb(209, 209, 209);
-  border: 1px solid rgb(209, 209, 209);*/
   border-radius: 8px;
   display: inline;
   position: relative;
   flex-basis: inherit;
-  padding: 2%;
+  padding: 1.5%;
   margin-right: 10px;}
 
 .nav a{
@@ -50,12 +54,10 @@ body{
   padding: 0.3em 0;
   color: rgb(199, 199, 199);}
 .nav a.menu{
-    position: relative;
-}
+    position: relative;}
 .nav a.menu:hover:before {
   visibility: visible;
-  width: 100%;
-}
+  width: 100%;}
 .nav a.menu:before {
   content: "";
   position: absolute;
@@ -65,162 +67,35 @@ body{
   left: 0;
   background-color: #FFF;
   visibility: hidden;
-  transition: all 0.3s ease-in-out;
-}
+  transition: all 0.3s ease-in-out;}
 
-  /*right*/
-.site-nav-right ul{
-  display: inline;}
+/* right */
+.nav-social{
+  overflow: hidden;
+  padding: 0em}
 
-.site-nav-right li {
-  height: 30px;
-  width: 30px;}
+.nav-social li {
+  display: inline;
+  position: relative;
+  flex-basis: inherit;
+  margin-left: 15px;
+  margin-block-start: 15px;}
+
+.nav-social a{
+  height: 28px;
+  width: 28px;
+  display: inline-block;}
 
 /* main */
 .site-home-content {
   background-color: rgb(255, 255, 255);
+  margin-top: 5em;
+  padding-top: 5em;
+  padding-bottom: 5em;
   padding-left: 5em;
   padding-right: 5em;}
-
 
 #navigation ul{
   padding: 10px;
   grid-column:1/3;grid-row:1/2;
-  position:relative;
-}
-
-/*
-.site-nav li {
-  display: inline;
-  text-align: center;
-  flex: 1;
-}
-
-ul {
-    flex-basis:inherit; 
-  }
-
-
-.account {
-  margin-left: 10px;
-  background: none;
-  border: none;
-}
-*/
-
-
-
-
-/*a,abbr,acronym,address,applet,article,aside,audio,big,blockquote,body,canvas,caption,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,ul,var,video{
-  margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}
-body{line-height:1}
-ol,ul{list-style:none}
-blockquote,q{quotes:none}
-blockquote:after,blockquote:before,q:after,q:before{content:"";content:none}
-img{max-width:100%}
-
-html{box-sizing:border-box;font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
-
-*,:after,:before{box-sizing:inherit}
-a{background-color:transparent}
-a:active,a:hover{outline:0}
-b,strong{font-weight:700}
-dfn,em,i{font-style:italic}
-h1{margin:.67em 0;font-size:2em}
-
-small{font-size:80%}
-sub,sup{position:relative;font-size:75%;line-height:0;vertical-align:baseline}s
-up{top:-.5em}sub{bottom:-.25em}img{border:0}
-svg:not(:root){overflow:hidden}
-mark{background-color:#fdffb6}
-code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}
-
-button,input,optgroup,select,textarea{margin:0;color:inherit;font:inherit}
-button{overflow:visible;border:none}
-button,select{text-transform:none}
-button,html input[type=button],input[type=reset],input[type=submit]{
-  cursor:pointer;-webkit-appearance:button}
-button[disabled],html input[disabled]{cursor:default}
-button::-moz-focus-inner,input::-moz-focus-inner{padding:0;border:0}
-
-input{line-height:normal}
-input:focus{outline:none}
-input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}
-input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}
-input[type=search]{box-sizing:content-box;-webkit-appearance:textfield}
-input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}
-
-legend{padding:0;border:0}
-textarea{overflow:auto}
-table{border-spacing:0;border-collapse:collapse}
-td,th{padding:0}
-
-html{overflow-y:scroll;font-size:62.5%;-webkit-tap-highlight-color:rgba(0,0,0,0)}body,html{overflow-x:hidden}
-
-body{
-    color:#313b3f;
-    font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
-    font-size:1.6rem;line-height:1.6em;font-weight:400;font-style:normal;letter-spacing:0;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;-moz-font-feature-settings:"liga" on}
-::-moz-selection{text-shadow:none;background:#cbeafb}
-::selection{text-shadow:none;background:#cbeafb}
-hr{position:relative;display:block;width:100%;margin:2.5em 0 3.5em;padding:0;height:1px;border:0;border-top:1px solid #e3e9ed}
-audio,canvas,iframe,img,svg,video{vertical-align:middle}
-fieldset{margin:0;padding:0;border:0}
-textarea{resize:vertical}
-blockquote,dl,ol,p,ul{margin:0 0 1.5em}
-ol,ul{padding-left:1.3em;padding-right:1.5em}
-ol ol,ol ul,ul ol,ul ul{margin:.5em 0 1em}
-ul{list-style:disc}ol{list-style:decimal}
-ol,ul{max-width:100%}
-li{margin:.5em 0;padding-left:.3em;line-height:1.6em}
-dt{float:left;margin:0 20px 0 0;width:120px;color:#15171a;font-weight:500;text-align:right}
-dd{margin:0 0 5px;text-align:left}
-blockquote{margin:1.5em 0;padding:0 1.6em;border-left:.5em solid #e5eff5}
-blockquote p{margin:.8em 0;font-size:1.2em;font-weight:300}
-blockquote small{display:inline-block;margin:.8em 0 .8em 1.5em;font-size:.9em;opacity:.8}
-blockquote small:before{content:"\2014 \00A0"}
-blockquote cite{font-weight:700}
-blockquote cite a{font-weight:400}
-a{color:#26a8ed;text-decoration:none}
-a:hover{text-decoration:underline}
-h1,h2,h3,h4,h5,h6{margin-top:0;line-height:1.15;font-weight:600;text-rendering:optimizeLegibility}
-h1{margin:0 0 .5em;font-size:5.5rem;font-weight:600}
-@media (max-width:500px){h1{font-size:2.2rem}}h2{margin:1.5em 0 .5em;font-size:2.2rem}
-@media (max-width:500px){h2{font-size:1.8rem}}h3{margin:1.5em 0 .5em;font-size:1.8rem;font-weight:500}
-@media (max-width:500px){h3{font-size:1.7rem}}h4{margin:1.5em 0 .5em;font-size:1.6rem;font-weight:500}
-h5,h6{margin:1.5em 0 .5em;font-size:1.4rem;font-weight:500}
-body{background:#fff}
-.img{display:block;width:100%;height:100%;background-position:50%;background-size:cover;border-radius:100%}
-.hidden{visibility:hidden;position:absolute;text-indent:-9999px}
-.site-wrapper{display:flex;flex-direction:column;min-height:100vh}
-.site-main{z-index:100;flex-grow:1}.outer{position:relative;padding:0 5vw}
-.inner{margin:0 auto;max-width:1040px;width:100%}
-@media (min-width:900px){.author-template .post-feed,.home-template .post-feed,.tag-template .post-feed{
-    padding:40px 0 5vw;border-top-left-radius:3px;border-top-right-radius:3px}
-.home-template .site-nav{position:relative}}
-
-.site-header-background{position:relative;margin-top:64px;padding-bottom:12px;color:#fff;background:#090a0b no-repeat 50%;background-size:cover}
-.site-header-background:before{bottom:0;background:rgba(0,0,0,.18)}
-.site-header-background:after,.site-header-background:before{content:"";position:absolute;top:0;right:0;left:0;z-index:10;display:block}
-.site-header-background:after{bottom:auto;height:140px;background:linear-gradient(rgba(0,0,0,.15),transparent)}
-.site-header-background.no-image:after,.site-header-background.no-image:before{display:none}.site-header-content{z-index:100;display:flex;flex-direction:column;justify-content:center;align-items:center;padding:6vw 3vw;min-height:200px;max-height:340px}.site-title{z-index:10;margin:0 0 0 -2px;padding:0;font-size:5rem;line-height:1em;font-weight:600}.site-logo{max-height:55px}.site-description{z-index:10;margin:0;padding:5px 0;font-size:2.1rem;line-height:1.4em;font-weight:400;opacity:.8}.site-home-header{z-index:1000}.site-home-header .site-header-background{margin-top:0}.site-home-header .site-header-content{padding:5vw 3vw 6vw}.site-home-header .site-title{font-size:5.5rem;text-align:center}.site-home-header .site-description{font-size:2.2rem;font-weight:300;text-align:center}.site-archive-header .site-header-content{position:relative;align-items:stretch;padding:12vw 0 20px;min-height:200px;max-height:600px}.site-archive-header .no-image{padding-top:0;padding-bottom:0;color:#15171a;background:#fff;opacity:1}.site-archive-header .no-image .site-description{color:#738a94;opacity:1}.site-archive-header .no-image .site-header-content{padding:5vw 0 10px;border-bottom:1px solid #e9eef1}@media (max-width:900px){.site-header-content{padding-bottom:9vw}}@media (max-width:500px){.site-home-header .site-title{font-size:4.2rem}.site-home-header .site-description{font-size:1.8rem}.site-archive-header .site-header-content{flex-direction:column;align-items:center;min-height:unset}.site-archive-header .site-title{font-size:4.2rem;text-align:center}.site-archive-header .no-image .site-header-content{padding:12vw 0 20px}}.site-nav-main{position:fixed;top:0;right:0;left:0;z-index:1000;background:#090a0b}.site-nav{position:relative;z-index:100;display:flex;justify-content:space-between;align-items:flex-start;overflow-y:hidden;height:64px;font-size:1.3rem}
-
-.site-nav-left-wrapper{position:relative;flex:1 0 auto;display:flex}
-.site-header-background:not(.responsive-header-img) 
-.site-nav-left-wrapper:after,.site-nav-main .site-nav-left-wrapper:after{content:"";position:absolute;top:0;z-index:1000;width:40px;height:100%;right:0;background:linear-gradient(90deg,rgba(9,10,11,0) 0,#090a0b)}
-.site-nav-left{flex:1 0 auto;display:flex;align-items:center;overflow-x:auto;overflow-y:hidden;-webkit-overflow-scrolling:touch;margin-right:10px;padding:10px 0 80px;font-weight:500;letter-spacing:.2px;text-transform:uppercase;white-space:nowrap;-ms-overflow-scrolling:touch}
-.site-nav-left .nav li:last-of-type{padding-right:20px}.site-nav-logo{position:relative;z-index:100;flex-shrink:0;display:inline-block;margin-right:32px;padding:12px 0;color:#fff;font-size:1.7rem;line-height:1.8rem;font-weight:700;letter-spacing:-.5px;text-transform:none}
-
-.site-nav-logo:hover{text-decoration:none}
-.site-nav-logo img{display:block;width:auto;height:21px}.site-home-header .site-nav-logo{display:none}
-
-.site-nav-content{position:relative;align-self:flex-start}
-.nav{position:absolute;z-index:1000;display:flex;margin:0 0 0 -12px;padding:0;list-style:none;transition:all 1s cubic-bezier(.19,1,.22,1)}
-.nav li{display:block;margin:0;padding:0}
-.nav li a{position:relative;display:block;padding:12px;color:#fff;opacity:.8;transition:opacity .35s ease-in-out}
-.nav li a:hover{text-decoration:none;opacity:1}
-
-
-# sourceMappingURL=screen.css.map */
-
-
+  position:relative;}
