--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ blockquote:after,blockquote:before,q:after,q:before{content:"";content:none}
 img{max-width:100%}
 
 html {
-  background-color: rgb(180, 211, 198);
+  background-color: rgb(220, 240, 232);
   margin: 0 auto;
   padding-left: 0em;
   padding-right: 0em;
@@ -88,16 +88,38 @@ body{
 
 /* main */
 .site-home-main{
-  background-color: rgb(255, 255, 255);}
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 0px;
+  margin-top: 5em;}
+
+.site-home-main > div {
+  text-align: left;}
 
 .site-home-content {
-  margin-top: 5em;
+  grid-column: 1 / 2;
+  background-color: rgb(255, 255, 255);
   padding-top: 5em;
   padding-bottom: 5em;
   padding-left: 5em;
   padding-right: 5em;}
 
+.site-home-content-rightblank{
+  background-color: rgb(255, 255, 255);
+  padding: 10em 10em;}
+
+/*
 #navigation ul{
   padding: 10px;
   grid-column:1/3;grid-row:1/2;
   position:relative;}
+*/
+
+/* footer */
+.site-home-footer{
+  text-align: center;
+  position:relative;
+  padding-top:20px;
+  padding-bottom:20px;
+  color:rgb(204, 204, 204);
+  background:#090a0b}
