--- a/css/index.css
+++ b/css/index.css
@@ -101,26 +101,19 @@ body{
 .site-home-main{
   background-color: rgb(255, 255, 255);
   display: grid;
-  grid-template-columns: auto auto;
-  grid-gap: 0px;
+  grid-template-columns: 80% auto;
   margin-top: 2em;
-  width: inherit;}
-
-.site-home-main > div {
-  text-align: left;}
-
-.site-home-main {
-  grid-column: 1 / 1;
-  background-color: rgb(255, 255, 255);
+  width: inherit;
   padding-top: 2em;
   padding-bottom: 5em;
   padding-left: 5em;
   padding-right: 5em;}
 
-.site-home-content-rightblank{
-  background-color: rgb(255, 255, 255);
-  padding: 10em 10em;}
+.site-home-main > div {
+  text-align: left;}
 
+.intro {
+  line-height: 1.5em;}
 /*
 #navigation ul{
   padding: 10px;
