--- a/css/index.css
+++ b/css/index.css
@@ -27,17 +27,17 @@ body{
 
 .site-nav{
   display: flex;
-  padding: 0em;
-  grid-template-columns: 50% auto;}
+  flex-flow: row wrap;
+  flex-wrap: nowrap;
+  padding: 0em;}
 
 .site-nav-left{
-  /*background-color: rgb(252, 201, 214);*/
-  flex: 5;
+  background-color: rgb(78, 78, 78);
+  flex-grow: 6;
   padding: 0rem;}
 
 .site-nav-right{
-  /*background-color: rgb(196, 144, 164);*/
-  flex: 1;
+  background-color: rgb(196, 144, 164);
   padding-right: 1em;
   text-align: right;}
 
@@ -89,14 +89,12 @@ body{
 
 .nav-social li {
   display: inline;
-  position: relative;
-  flex-basis: inherit;
   margin-left: 15px;
   margin-block-start: 15px;}
 
 .nav-social a{
-  height: 28px;
-  width: 28px;
+  height: 25px;
+  width: 25px;
   display: inline-block;}
 
 /* main */
