--- a/css/index.css
+++ b/css/index.css
@@ -22,27 +22,24 @@ body{
 
 /* header */
 .header-with-background {
-  background-color: rgb(0, 0, 0);
-  padding: 0em 0em 0em 1em;}
+  padding-bottom: 2em;}
 
 .site-nav{
+  background-color: rgb(43, 43, 43);
+  padding: 0em 2em 2em 0em;}
+
+.site-nav-two{
+  background-color: rgb(0, 0, 0);
   display: flex;
   flex-flow: row wrap;
   flex-wrap: nowrap;
-  padding: 0em;}
-
-.site-nav-left{
-  background-color: rgb(78, 78, 78);
-  flex-grow: 6;
-  padding: 0rem;}
-
-.site-nav-right{
-  background-color: rgb(196, 144, 164);
-  padding-right: 1em;
-  text-align: right;}
+  width: 100%;
+  padding: 0em 1em 0em 1em;}
 
 /* left */
 .nav{
+  /*background-color: rgb(7, 7, 7);*/
+  flex-grow: 2;
   overflow: hidden;
   padding: 0rem;
   overflow-x: auto;
@@ -84,6 +81,7 @@ body{
 
 /* right */
 .nav-social{
+  /*background-color: rgb(97, 0, 0);*/
   overflow: hidden;
   padding: 0em;}
 
