--- a/css/index.css
+++ b/css/index.css
@@ -82,42 +82,35 @@ body{
 /* right */
 .nav-social{
   /*background-color: rgb(97, 0, 0);*/
-  overflow: hidden;
   padding: 0em;}
 
 .nav-social li {
   display: inline;
-  margin-left: 15px;
-  margin-block-start: 15px;}
+  margin-left: 12px;}
 
 .nav-social a{
+  display: inline-block;
   height: 25px;
-  width: 25px;
-  display: inline-block;}
+  width: 25px;}
 
 /* main */
 .site-home-main{
   background-color: rgb(255, 255, 255);
   display: grid;
-  grid-template-columns: 80% auto;
+  grid-template-columns: 90% auto;
   margin-top: 2em;
   width: inherit;
   padding-top: 2em;
   padding-bottom: 5em;
-  padding-left: 5em;
-  padding-right: 5em;}
-
-.site-home-main > div {
-  text-align: left;}
+  padding-left: 5%;
+  padding-right: 5%;}
 
 .intro {
+  text-align: left;
   line-height: 1.5em;}
-/*
-#navigation ul{
-  padding: 10px;
-  grid-column:1/3;grid-row:1/2;
-  position:relative;}
-*/
+
+.site-home-content-rightblank{
+  /*background-color: rgb(247, 222, 222);*/}
 
 /* footer */
 .site-home-footer{
