--- a/css/index.css
+++ b/css/index.css
@@ -81,12 +81,15 @@ body{
 
 /* right */
 .nav-social{
-  /*background-color: rgb(97, 0, 0);*/
-  padding: 0em;}
+  display: block;
+  overflow: hidden;
+  padding-left: 1em;
+  padding-right: 1em;
+  white-space:nowrap;}
 
 .nav-social li {
-  display: inline;
-  margin-left: 12px;}
+  display: inline-block;
+  margin-right: 12px;}
 
 .nav-social a{
   display: inline-block;
