--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,8 @@ body{
   width: 25px;}
 
 /* main */
-.site-home-main, .site-kg-main, .site-fl-main {
+  /* Title */
+.site-home-main, .site-kg-main, .site-fl-main, .site-ab-main, .site-ct-main {
   background-color: rgb(255, 255, 255);
   display: grid;
   grid-template-columns: 90% auto;
@@ -108,6 +109,7 @@ body{
   padding-left: 5%;
   padding-right: 5%;}
 
+  /* Content */
 .intro {
   text-align: left;
   line-height: 1.5em;}
@@ -115,6 +117,9 @@ body{
 .intro a {
   color:rgb(137, 115, 173)}
   
+.icon{
+  height: 25px;
+  width: 25px;}
 
 /* footer */
 .site-home-footer{
