--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@ img{max-width:100%}
 html {
   background-color: rgb(220, 240, 232);
   margin: 0 auto;
+  height: 100%;
   padding-left: 0em;
   padding-right: 0em;
   font-size: 10px;}
@@ -17,6 +18,7 @@ body{
   font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
   font-size:1.6rem;line-height:1.6em;font-weight:400;font-style:normal;letter-spacing:0;
   line-height:1;
+  min-height: 100%;
   margin-right:0px;
   margin-left:0px;}
 
@@ -56,6 +58,9 @@ body{
   flex-basis: inherit;
   padding: 1.5%;
   margin-right: 10px;}
+
+.logo {
+  height: 19px;}
 
 .nav a{
   display: inline-block;
