--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,12 @@ body{
   width: 100%;
   padding: 0em 1em 0em 1em;}
 
+.nav-logo{
+  min-width: 45px;
+  padding-top: 0.9em;
+  padding-bottom: 1.2em;
+  padding-right: 1em;}
+
 /* left */
 .nav{
   /*background-color: rgb(7, 7, 7);*/
@@ -60,7 +66,7 @@ body{
   margin-right: 10px;}
 
 .logo {
-  height: 19px;}
+  height: 25px;}
 
 .nav a{
   display: inline-block;
