--- a/css/index.css
+++ b/css/index.css
@@ -14,13 +14,16 @@ html {
 
 body{
   background-color: rgb(191, 180, 211);
-  color:#313b3f;
-  font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
-  font-size:1.6rem;line-height:1.6em;font-weight:400;font-style:normal;letter-spacing:0;
-  line-height:1;
+  color: #313b3f;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+  font-size: 1.6rem;line-height: 1.6em;font-weight: 400;font-style:normal;letter-spacing:0;
+  line-height: 1;
+  position: relative;
+  height: 100%;
   min-height: 100%;
-  margin-right:0px;
-  margin-left:0px;}
+  padding-bottom: 10em;
+  margin-right: 0px;
+  margin-left: 0px;}
 
 
 /* header */
@@ -116,10 +119,34 @@ body{
   grid-template-columns: 90% auto;
   margin-top: 2em;
   width: inherit;
+  height: 100%;
+  min-height: 100%;
   padding-top: 2em;
-  padding-bottom: 5em;
+  padding-bottom: 0em;
   padding-left: 5%;
   padding-right: 5%;}
+
+.site-kg-main{
+  background-color: rgb(224, 220, 240);}
+
+.knowledge-card{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4em;
+  height: auto;
+  margin-top: 2em;
+  margin-bottom: 2em;}
+  
+.knowledge-card div{
+  background-color: rgb(255, 255, 255);
+  color:rgb(152, 149, 158);
+  flex-grow: 2;
+  overflow: hidden;
+  height: 50%;
+  width: 300px;
+  margin-bottom: 10px;
+  padding: 1em;}
+
 
   /* Content */
 .intro {
@@ -131,10 +158,13 @@ body{
   width: 25px;}
 
 /* footer */
-.site-home-footer{
+footer{
   text-align: center;
-  position:relative;
+  position:absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
   padding-top:20px;
   padding-bottom:20px;
   color:rgb(204, 204, 204);
-  background:#090a0b}
+  background:#090a0b;}
