--- a/css/index.css
+++ b/css/index.css
@@ -127,26 +127,24 @@ body{
   padding-right: 5%;}
 
 .site-kg-main{
-  background-color: rgb(224, 220, 240);}
+  background-color: rgb(224, 220, 240);
+  grid-template-columns: 100% auto;
+  width: inherit;}
 
-.knowledge-card{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 4em;
-  height: auto;
-  margin-top: 2em;
-  margin-bottom: 2em;}
+.knowledge-card{  
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 3em;
+  margin-top: 1em;}
   
 .knowledge-card div{
   background-color: rgb(255, 255, 255);
   color:rgb(152, 149, 158);
-  flex-grow: 2;
-  overflow: hidden;
-  height: 50%;
-  width: 300px;
-  margin-bottom: 10px;
+  height: 60%;
+  width: 90%;
+  margin-top 0em;
+  margin-bottom: 0em;
   padding: 1em;}
-
 
   /* Content */
 .intro {
