--- a/css/index.css
+++ b/css/index.css
@@ -129,11 +129,16 @@ body{
 .site-kg-main{
   background-color: rgb(224, 220, 240);
   grid-template-columns: 100% auto;
-  width: inherit;}
+  width: inherit;
+  min-height: 100%;}
+
+.site-kg-content{
+  height: 100%;
+  min-height: 100%;}
 
 .knowledge-card{  
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 3em;
   margin-top: 1em;}
   
@@ -142,7 +147,7 @@ body{
   color:rgb(152, 149, 158);
   height: 60%;
   width: 90%;
-  margin-top 0em;
+  margin-top: 0em;
   margin-bottom: 0em;
   padding: 1em;}
 
