--- a/css/index.css
+++ b/css/index.css
@@ -28,10 +28,9 @@ body{
 
 /* header */
 .header-with-background {
-  padding-bottom: 2em;}
+  padding-bottom: 2.2em;}
 
 .site-nav{
-  background-color: rgb(43, 43, 43);
   padding: 0em 2em 2em 0em;}
 
 .site-nav-two{
@@ -40,17 +39,16 @@ body{
   flex-flow: row wrap;
   flex-wrap: nowrap;
   width: 100%;
-  padding: 0em 1em 0em 1em;}
+  padding: 0.2em 1em 0em 1em;}
 
 .nav-logo{
   min-width: 45px;
-  padding-top: 0.9em;
-  padding-bottom: 1.2em;
+  padding-top: 0.85em;
+  padding-bottom: 1em;
   padding-right: 1em;}
 
 /* left */
 .nav{
-  /*background-color: rgb(7, 7, 7);*/
   flex-grow: 2;
   overflow: hidden;
   padding: 0rem;
@@ -99,12 +97,12 @@ body{
   display: block;
   overflow: hidden;
   padding-left: 1em;
-  padding-right: 1.5em;
+  padding-right: 0.8em;
   white-space:nowrap;}
 
 .nav-social li {
   display: inline-block;
-  margin-right: 12px;}
+  /*margin-right: 12px;*/}
 
 .nav-social a{
   display: inline-block;
@@ -132,9 +130,18 @@ body{
   width: inherit;
   min-height: 100%;}
 
+  /* Content */
+.intro {
+  text-align: left;
+  line-height: 1.5em;}
+  
+.icon{
+  height: 25px;
+  width: 25px;}
+
 .site-kg-content{
   height: 100%;
-  min-height: 100%;  }
+  min-height: 100%;}
 
 .knowledge-card{  
   display: grid;
@@ -152,14 +159,15 @@ body{
   margin-bottom: 0em;
   padding: 1em;}
 
-  /* Content */
-.intro {
-  text-align: left;
-  line-height: 1.5em;}
-  
-.icon{
-  height: 25px;
-  width: 25px;}
+.contact-icons{
+  display: grid;
+  grid-template-columns: 30px 30px;
+  gap: 1em;
+  padding-left: 0.5em;}
+
+.contact-twitter{
+  height: 23px;
+  width: 23px;}
 
 /* footer */
 footer{
