--- a/css/index.css
+++ b/css/index.css
@@ -28,10 +28,10 @@ body{
 
 /* header */
 .header-with-background {
-  padding-bottom: 2.2em;}
+  padding-bottom: 1em;}
 
 .site-nav{
-  padding: 0em 2em 2em 0em;}
+  padding: 0em 0em 1em 0em;}
 
 .site-nav-two{
   background-color: rgb(0, 0, 0);
@@ -39,19 +39,26 @@ body{
   flex-flow: row wrap;
   flex-wrap: nowrap;
   width: 100%;
-  padding: 0.2em 1em 0em 1em;}
+  height: inherit; 
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;}
 
 .nav-logo{
-  min-width: 45px;
-  padding-top: 0.85em;
-  padding-bottom: 1em;
-  padding-right: 1em;}
+  min-width: 4rem;
+  padding-top: 0em;
+  padding-bottom: 0em;
+  padding-left: 1em;
+  padding-right: 5%;
+  margin-top: 0em;
+  margin-bottom: 0em;}
 
 /* left */
 .nav{
-  flex-grow: 2;
+  flex: 2;
   overflow: hidden;
-  padding: 0rem;
+  padding: 0em 0em 0em 0em;
+  margin-top: 0em;
+  margin-bottom: 0em;
   overflow-x: auto;
   white-space: nowrap;}
 
@@ -63,21 +70,21 @@ body{
   display: inline;
   position: relative;
   flex-basis: inherit;
-  padding: 1.5%;
-  margin-right: 10px;}
+  padding: 0rem;
+  margin-right: 5%;}
 
 .logo {
   height: 25px;}
 
 .nav a{
   display: inline-block;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   text-decoration: none;
   padding: 0.3em 0;
   color: rgb(199, 199, 199);}
 
 .nav a.menu{
-    position: relative;}
+  position: relative;}
 .nav a.menu:hover:before {
   visibility: visible;
   width: 100%;}
@@ -85,7 +92,7 @@ body{
   content: "";
   position: absolute;
   width: 0;
-  height: 0.2rem;
+  height: 0.11rem;
   bottom: 0;
   left: 0;
   background-color: #FFF;
@@ -98,6 +105,8 @@ body{
   overflow: hidden;
   padding-left: 1em;
   padding-right: 0.8em;
+  margin-top: 0em;
+  margin-bottom: 0em;
   white-space:nowrap;}
 
 .nav-social li {
@@ -129,6 +138,9 @@ body{
   grid-template-columns: 100% auto;
   width: inherit;
   min-height: 100%;}
+
+.site-title{
+  font-size: 1.7em;}
 
   /* Content */
 .intro {
