--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 ol,ul{list-style:none}
-a {color:rgb(137, 115, 173)}
+a:link {text-decoration: none; color: rgb(115, 124, 173)}
+a:hover {text-decoration:underline;}
+a:visited {text-decoration: none; color:rgb(137, 115, 173)}
 blockquote,q{quotes:none}
 blockquote:after,blockquote:before,q:after,q:before{content:"";content:none}
 img{max-width:100%}
@@ -160,7 +162,7 @@ body{
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 3em;
   margin-top: 1em;
-  overflow: scroll；}
+  overflow: scroll;}
   
 .knowledge-card div{
   background-color: rgb(255, 255, 255);
@@ -171,23 +173,72 @@ body{
   margin-bottom: 0em;
   padding: 1em;}
 
-.contact-icons{
-  display: grid;
-  grid-template-columns: 30px 30px;
-  gap: 1em;
-  padding-left: 0.5em;}
-
-.contact-twitter{
-  height: 23px;}
-
 /* footer */
 footer{
   text-align: center;
   position:absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;
+
   padding-top:20px;
   padding-bottom:20px;
   color:rgb(204, 204, 204);
   background:#090a0b;}
+
+.copyright-contact{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 0.5em;
+  align-items: center;
+  padding: 0em 0em 0em 0em;
+  margin: 0em 0em 0em 0em;}
+
+.copyright{
+  text-align: center;}
+
+.footer-contact{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+  gap: 1em;
+  height:inherit;
+  padding: 0em 0em 0em 0em;
+  margin: 0em 2em 0em 2em;}
+
+.contact-email{
+  height:inherit;}
+
+.contact-icon{
+  height: 20px;
+  width: 20px;}
+
+.email{  
+  display: grid;
+  grid-template-columns: 20px 20px;
+  align-items: center;
+  gap: 0.5em;}
+  
+.footer-contact a:hover {
+  text-decoration: none;
+  font-weight:bold;}
+
+.text-email{
+  margin: 0em 0em 0em 0em;}
+
+.twitter{  
+  display: grid;
+  grid-template-columns: 20px 40px;
+  align-items: center;
+  gap: 0.5em;}
+  
+.text-twitter{
+  margin: 0em 0em 0em 0em;}
+
+.linkedin{  
+  display: grid;
+  grid-template-columns: 20px 40px;
+  align-items: center;
+  gap: 0.5em;}
+  
+.text-linkedin{
+  margin: 0em 0em 0em 0em;}
+
