--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@ img{max-width:100%}
 html {
   background-color: rgb(220, 240, 232);
   margin: 0 auto;
+  width: 100%;
   height: 100%;
   padding-left: 0em;
   padding-right: 0em;
@@ -21,32 +22,32 @@ body{
   font-size: 1.6rem;line-height: 1.6em;font-weight: 400;font-style:normal;letter-spacing:0;
   line-height: 1;
   position: relative;
+  min-width: 100%;
   height: 100%;
   min-height: 100%;
-  padding-bottom: 10em;
-  margin-right: 0px;
-  margin-left: 0px;}
+  padding-bottom: 0em 0em 0em 0em;
+  margin: 0em 0em 0em 0em;}
 
 
 /* header */
-.header-with-background {
-  padding-bottom: 1em;}
-
-.site-nav{
-  padding: 0em 0em 1em 0em;}
-
-.site-nav-two{
+header{
   background-color: rgb(0, 0, 0);
+  height: 6%;
+  width: 100%;}
+
+.site-nav-three{
   display: flex;
   flex-flow: row wrap;
   flex-wrap: nowrap;
   width: 100%;
-  height: inherit; 
-  padding-top: 0.8rem;
-  padding-bottom: 0.9rem;}
+  height: auto;
+  margin-top: 1.5%;
+  margin-bottom: 1%;}
 
+/* left */
 .nav-logo{
   min-width: 4rem;
+  align-items: center;
   padding-top: 0em;
   padding-bottom: 0em;
   padding-left: 1em;
@@ -54,7 +55,6 @@ body{
   margin-top: 0em;
   margin-bottom: 0em;}
 
-/* left */
 .nav{
   flex: 2;
   overflow: hidden;
@@ -105,6 +105,7 @@ body{
 .nav-social{
   display: block;
   overflow: hidden;
+  align-items: center;
   padding-left: 1em;
   padding-right: 0.8em;
   margin-top: 0.2em;
@@ -122,29 +123,35 @@ body{
 
 /* main */
   /* Title */
-.site-home-main, .site-kg-main, .site-fl-main, .site-ab-main, .site-ct-main {
+main{
   background-color: rgb(255, 255, 255);
   display: grid;
   grid-template-columns: 90% auto;
-  margin-top: 2em;
   width: inherit;
-  height: 100%;
-  min-height: 100%;
+  min-height: 80%;
+  max-height: auto;
+  position: absolute;
   padding-top: 2em;
   padding-bottom: 0em;
   padding-left: 5%;
-  padding-right: 5%;}
+  padding-right: 5%;
+  margin-top: 2em;}
 
 .site-kg-main{
   background-color: rgb(224, 220, 240);
   grid-template-columns: 100% auto;
-  width: inherit;
-  min-height: 100%;}
+  width: 100%;
+  min-height: auto;}
 
 .site-title{
   font-size: 1.7em;}
 
   /* Content */
+.site-home-content, .site-kg-content, .site-fl-content, .site-ab-content{
+  height:auto;}
+.site-home-content-rightblank{
+  height:auto;}
+
 .intro {
   text-align: left;
   line-height: 1.5em;}
@@ -179,7 +186,7 @@ footer{
   position:absolute;
   bottom: 0;
   width: 100%;
-
+  min-height: 6%;
   padding-top:20px;
   padding-bottom:20px;
   color:rgb(204, 204, 204);
@@ -199,7 +206,7 @@ footer{
 .footer-contact{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-  gap: 1em;
+  gap: 0.5em;
   height:inherit;
   padding: 0em 0em 0em 0em;
   margin: 0em 2em 0em 2em;}
