--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,9 @@ body{
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
   font-size: 1.6rem;line-height: 1.6em;font-weight: 400;font-style:normal;letter-spacing:0;
   line-height: 1;
-  position: relative;
+  display: grid;
+  grid-template-rows: 3em auto 3em;
+  width: 100%;
   min-width: 100%;
   height: 100%;
   min-height: 100%;
@@ -32,17 +34,18 @@ body{
 /* header */
 header{
   background-color: rgb(0, 0, 0);
-  height: 6%;
-  width: 100%;}
+  height: 3em;
+  width: inherit;
+  align-items: center;
+  padding: 0em 0em 0em 0em;
+  margin: 0em 0em 0em 0em;}
 
 .site-nav-three{
   display: flex;
   flex-flow: row wrap;
   flex-wrap: nowrap;
   width: 100%;
-  height: auto;
-  margin-top: 1.5%;
-  margin-bottom: 1%;}
+  height: auto;}
 
 /* left */
 .nav-logo{
@@ -125,31 +128,34 @@ header{
   /* Title */
 main{
   background-color: rgb(255, 255, 255);
+  position: relative;
   display: grid;
   grid-template-columns: 90% auto;
   width: inherit;
-  min-height: 80%;
-  max-height: auto;
-  position: absolute;
-  padding-top: 2em;
-  padding-bottom: 0em;
-  padding-left: 5%;
-  padding-right: 5%;
-  margin-top: 2em;}
+  height: inherit;
+  /*margin-top: 1.5em;*/}
 
 .site-kg-main{
   background-color: rgb(224, 220, 240);
   grid-template-columns: 100% auto;
-  width: 100%;
-  min-height: auto;}
+  width: inherit;
+  min-height: 80%;
+  max-height: auto;}
 
 .site-title{
   font-size: 1.7em;}
 
   /* Content */
 .site-home-content, .site-kg-content, .site-fl-content, .site-ab-content{
-  height:auto;}
+  width: auto;
+  height:auto;
+  padding-top: 2em;
+  padding-bottom: 0em;
+  padding-left: 5%;
+  padding-right: 5%;
+  overflow:hidden;}
 .site-home-content-rightblank{
+  width: auto;
   height:auto;}
 
 .intro {
@@ -185,8 +191,8 @@ footer{
   text-align: center;
   position:absolute;
   bottom: 0;
-  width: 100%;
-  min-height: 6%;
+  width: inherit;
+  min-height: 3em;
   padding-top:20px;
   padding-bottom:20px;
   color:rgb(204, 204, 204);
