--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,8 @@ header{
   flex-flow: row wrap;
   flex-wrap: nowrap;
   width: 100%;
-  height: auto;}
+  height: auto;
+  padding-top: 0.5em;}
 
 /* left */
 .nav-logo{
@@ -132,7 +133,7 @@ main{
   display: grid;
   grid-template-columns: 90% auto;
   width: inherit;
-  height: inherit;
+  height: auto;
   /*margin-top: 1.5em;*/}
 
 .site-kg-main{
@@ -150,7 +151,7 @@ main{
   width: auto;
   height:auto;
   padding-top: 2em;
-  padding-bottom: 0em;
+  padding-bottom: 5em;
   padding-left: 5%;
   padding-right: 5%;
   overflow:hidden;}
@@ -166,13 +167,11 @@ main{
   height: 25px;
   width: 25px;}
 
-.site-kg-content{
-  height: 100%;
-  min-height: 100%;}
-
 .knowledge-card{  
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  height: auto;
+  max-height: inherit;
   gap: 3em;
   margin-top: 1em;
   overflow: scroll;}
@@ -189,10 +188,10 @@ main{
 /* footer */
 footer{
   text-align: center;
-  position:absolute;
-  bottom: 0;
+  /*position:relative;
+  bottom: 0;*/
   width: inherit;
-  min-height: 3em;
+  min-height: 4em;
   padding-top:20px;
   padding-bottom:20px;
   color:rgb(204, 204, 204);
@@ -207,7 +206,8 @@ footer{
   margin: 0em 0em 0em 0em;}
 
 .copyright{
-  text-align: center;}
+  text-align: center;
+  margin: 0.5em 0em 0.5em 0em;}
 
 .footer-contact{
   display: grid;
