--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@ ol,ul{list-style:none}
 a:link {text-decoration: none; color: rgb(115, 124, 173)}
 a:hover {text-decoration:underline;}
 a:visited {text-decoration: none; color:rgb(137, 115, 173)}
+::-webkit-scrollbar {display: none;}
 blockquote,q{quotes:none}
 blockquote:after,blockquote:before,q:after,q:before{content:"";content:none}
 img{max-width:100%}
@@ -154,7 +155,8 @@ main{
   padding-bottom: 5em;
   padding-left: 5%;
   padding-right: 5%;
-  overflow:hidden;}
+  overflow-y: scroll;}
+
 .site-home-content-rightblank{
   width: auto;
   height:auto;}
@@ -173,14 +175,13 @@ main{
   height: auto;
   max-height: inherit;
   gap: 3em;
-  margin-top: 1em;
-  overflow: scroll;}
+  margin-top: 1em;}
   
 .knowledge-card div{
   background-color: rgb(255, 255, 255);
   color:rgb(152, 149, 158);
-  height: 60%;
-  width: 90%;
+  min-height: 3em;
+  width: inherit;
   margin-top: 0em;
   margin-bottom: 0em;
   padding: 1em;}
