--- a/css/index.css
+++ b/css/index.css
@@ -127,7 +127,11 @@ header{
 
 /* main */
 .container{
+  height: inherit;
+  padding: 0em 0em 0em 0em;
+  margin: 0em 0em 0em 0em;
   overflow-y: scroll;}
+
 /* Title */
 main{
   background-color: rgb(255, 255, 255);
@@ -177,7 +181,7 @@ main{
   height: auto;
   max-height: inherit;
   gap: 3em;
-  margin-top: 1em;}
+  margin-top: 3em;}
   
 .knowledge-card div{
   border-radius: 6px;
