--- a/css/index.css
+++ b/css/index.css
@@ -178,21 +178,45 @@ main{
 
 .knowledge-card{  
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   height: auto;
   max-height: inherit;
   gap: 3em;
   margin-top: 3em;}
   
-.knowledge-card div{
+.card{
   border-radius: 6px;
   background-color: rgb(255, 255, 255);
   color:rgb(152, 149, 158);
   min-height: 3em;
   width: inherit;
+  height: 300px;
   margin-top: 0em;
   margin-bottom: 0em;
-  padding: 1em;}
+  padding: 1em;
+  overflow: hidden;}
+
+.card-title{
+  display: grid;
+  grid-template-rows: 70% 30%;
+  gap: 1em;
+  height:inherit;}
+
+.card-title > .card-cover-image{
+  height:200px;
+  overflow: hidden;
+  padding: 0em 0em 0em 0em;}
+
+.card-title > .card-cover-title{
+  text-align: center;
+  height:100px;
+  padding: 0em 0em 0em 0em;}
+
+.card-title h4{
+  margin: 0em 0em 0em 0em;}
+
+.cover-image{
+  border-radius: 3px;}
 
 /* footer */
 footer{
@@ -234,16 +258,16 @@ footer{
   height: 20px;
   width: 20px;}
 
+.footer-contact a:hover {
+  text-decoration: none;
+  font-weight:bold;}
+
 .email{  
   display: grid;
   grid-template-columns: 20px 20px;
   align-items: center;
   gap: 0.5em;}
   
-.footer-contact a:hover {
-  text-decoration: none;
-  font-weight:bold;}
-
 .text-email{
   margin: 0em 0em 0em 0em;}
 
