--- a/css/index.css
+++ b/css/index.css
@@ -17,23 +17,24 @@ html {
   font-size: 10px;}
 
 body{
-  background-color: rgb(191, 180, 211);
+  background-color: rgb(255, 255, 255);
+  /*background-color: rgb(191, 180, 211);*/
   color: #313b3f;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
   font-size: 1.6rem;line-height: 1.6em;font-weight: 400;font-style:normal;letter-spacing:0;
   line-height: 1;
   display: grid;
   grid-template-rows: 3em auto;
-  width:inherit;
+  width: 100%;
   min-width: 100%;
-  height:100%;
+  height: 100%;
   min-height: 100%;
   padding-bottom: 0em 0em 0em 0em;
-  margin: 0em 0em 0em 0em;}
+  margin: 0;}
 
 
 /* header */
-header{
+body > header{
   background-color: rgb(0, 0, 0);
   height: 3em;
   width: inherit;
@@ -136,12 +137,12 @@ header{
 main{
   background-color: rgb(255, 255, 255);
   position: relative;
-  display: grid;
-  grid-template-columns: 90% auto;
   width: inherit;
   height: auto;
   min-height: 1000px;
-  /*margin-top: 1.5em;*/}
+  padding: 0 20px 40px 20px;
+  margin-left: 5em;
+  margin-right: 5em;}
 
 .site-kg-main{
   background-color: rgb(224, 220, 240);
@@ -163,10 +164,6 @@ main{
   padding-left: 5%;
   padding-right: 5%;
   /*overflow-y: scroll;*/}
-
-.site-home-content-rightblank{
-  width: auto;
-  height:auto;}
 
 .intro {
   text-align: left;
