--- a/css/index.css
+++ b/css/index.css
@@ -141,11 +141,11 @@ main{
   height: auto;
   min-height: 1000px;
   padding: 0 20px 40px 20px;
-  margin-left: 3%;
-  margin-right: 3%;}
+  margin-left: 0;
+  margin-right: 0;}
 
 .site-kg-main{
-  background-color: rgb(224, 220, 240);
+  background-color: rgb(233, 230, 245);
   display:grid;
   grid-template-columns: 100% auto;
   width: inherit;
@@ -177,48 +177,57 @@ main{
 
 .knowledge-card{  
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   height: auto;
   max-height: inherit;
   gap: 3em;
   margin-top: 3em;}
   
 .card{
-  border-radius: 6px;
-  background-color: rgb(246, 245, 252);
+  border-radius: 4px;
+  background-color: rgb(253, 253, 255);
   color:rgb(152, 149, 158);
   min-height: 3em;
   width: inherit;
   height: 300px;
   margin-top: 0em;
   margin-bottom: 0em;
-  padding: 1em;
+  padding: 8px;
   overflow: hidden;}
 
-.card-title{
+.card > .card-title{
   display: grid;
-  grid-template-rows: 70% 30%;
-  gap: 1em;
-  height:inherit;}
+  height: inherit;
+  grid-template-rows: auto auto;
+  gap: 30px;
+  
+  overflow: hidden;}
 
 .card-title:hover {
   text-decoration:none;}
 
 .card-title > .card-cover-image{
-  height:200px;
+  height:180px;
+  z-index: 1;
   overflow: hidden;
   padding: 0em 0em 0em 0em;}
 
 .card-title > .card-cover-title{
+  background-color: rgb(253, 253, 255);
   text-align: center;
-  height:100px;
-  padding: 0em 0em 0em 0em;}
+  height:80px;
+  z-index: 2;
+  overflow: hidden;
+  padding: 0em 0em 0em 0em;
+  margin: 0em 0em 0em 0em;}
 
 .card-title h4{
   margin: 0em 0em 0em 0em;}
 
 .cover-image{
-  border-radius: 3px;}
+  border-radius: 3px;
+  min-width: auto;
+  min-height: auto;}
 
 /* footer */
 footer{
