--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,7 @@ body{
   min-width: 100%;
   height: 100%;
   min-height: 100%;
-  padding-bottom: 0em 0em 0em 0em;
+  padding: 0em 0em 0em 0em;
   margin: 0;}
 
 
@@ -38,7 +38,8 @@ body{
   height: inherit;
   padding: 0em 0em 0em 0em;
   margin: 0em 0em 0em 0em;
-  overflow-y: scroll;}
+  overflow-y: scroll;
+}
 
 /* Title */
 main{
@@ -48,8 +49,7 @@ main{
   height: auto;
   min-height: 100%;
   padding: 0 20px 40px 20px;
-  margin-left: 0;
-  margin-right: 0;}
+  margin: 0;}
 
 
 .site-title{
@@ -59,7 +59,7 @@ main{
 .site-home-content, .site-kg-content, .site-fl-content, .site-re-content{
   width: auto;
   height: auto;
-  padding-top: 10%;
+  padding-top: 10vw;
   padding-bottom: 5vw;
   padding-left: 5vw;
   padding-right: 5vw;
