--- a/css/index.css
+++ b/css/index.css
@@ -47,7 +47,7 @@ main{
   position: relative;
   width: auto;
   height: auto;
-  min-height: 100%;
+  min-height: 95%;
   padding: 0 20px 40px 20px;
   margin: 0;}
 
@@ -56,7 +56,10 @@ main{
   font-size: 1.6em;}
 
   /* Content */
-.site-home-content, .site-kg-content, .site-fl-content, .site-re-content{
+.site-home-content, 
+.site-kg-content, .site-hl-content,
+.site-fl-content, 
+.site-re-content{
   width: auto;
   height: auto;
   padding-top: 10vw;
