--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,8 @@ body{
   height: 100%;
   min-height: 100%;
   padding: 0;
-  margin: 0;}
+  margin: 0;
+}
 
 
 /* main */
@@ -62,6 +63,8 @@ main{
 .site-re-content{
   width: auto;
   height: auto;
+  font-size: 1.8rem;
+  line-height: 1.5em;
   padding-top: 10vw;
   padding-bottom: 5vw;
   padding-left: 5vw;
