added reference page for cl content

--- a/css/human_language.css
+++ b/css/human_language.css
@@ -22,9 +22,9 @@
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1.1fr;
-    gap: 2vh;
+    gap: 10px;
     background-color: rgb(253, 253, 255);
-    border-radius: 10%;
+    border-radius: 40px;
     box-shadow: 2px 5px 13px rgb(179 178 194);
     color:rgb(145 134 167);
     width: 300px;
@@ -38,21 +38,21 @@
 .card-left-column {
     position: absolute;
     display: grid;
-    grid-template-rows: 2fr 1fr;
-    gap: 2vh;
+    grid-template-rows: 3fr 1fr;
+    gap: 15px;
     top: 2vh; 
     left: 2vh; 
-    right: 55%; 
+    right: 52%; 
     bottom: 2vh;
     }
 
 .card-right-column {
     position: absolute;
     display: grid;
-    grid-template-rows: 5fr 1fr;
+    grid-template-rows: 1.4fr 1fr;
     align-items: stretch;
     justify-items: stretch;
-    gap: 2vh;
+    gap: 15px;
     top: 2vh; 
     left: 52%; 
     right: 2vh; 
@@ -61,24 +61,29 @@
 
 .card-right-column .card-right-top {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    gap: 2vh;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 15px;
 }
 
 .card-right-column .card-right-bottom {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 2vh;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+}
+
+.card-right-column .card-right-bottom .box {
+    border-radius: 25px;
 }
 
 .box {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    text-align: center;
     flex-direction: column;
     overflow:hidden;
     background-color: rgb(253, 253, 255);
-    border-radius: 18%;
+    border-radius: 30px;
     box-shadow: 1px 4px 12px rgb(199, 198, 213);
     height: 100%;
     width: 100%;
