--- a/css/index.css
+++ b/css/index.css
@@ -7,14 +7,45 @@ blockquote,q{quotes:none}
 blockquote:after,blockquote:before,q:after,q:before{content:"";content:none}
 img{max-width:100%}
 
+/* The main scrollbar */
+::-webkit-scrollbar {
+  width: 1vh; /* width of the entire scrollbar */
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgba(237,235,250, 0.0); /* color of the tracking area */
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(199,196,218); /* color of the scroll handle */
+  border-radius: 10px;
+  transition: all 1s ease-in-out 0.5s;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(199,196,218, 0.8); /* color of the scroll handle on hover*/
+}
+
+body.site-home::-webkit-scrollbar-thumb {
+  background: transparent;
+}
+
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+ 
 html {
-  background-color: rgb(220, 240, 232);
+  background-color: rgb(255, 255, 255);
   margin: 0 auto;
   width: 100%;
   height: 100%;
   padding-left: 0em;
   padding-right: 0em;
-  font-size: 10px;}
+  font-size: 10px;
+}
 
 body{
   background-color: rgb(255, 255, 255);
@@ -39,8 +70,8 @@ body{
   height: inherit;
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  /*overflow-x: hidden;
+  overflow-y: hidden;*/
 }
 
 /* Title */
