--- a/css/index.css
+++ b/css/index.css
@@ -70,8 +70,8 @@ body{
   height: inherit;
   padding: 0;
   margin: 0;
-  /*overflow-x: hidden;
-  overflow-y: hidden;*/
+  overflow-x: hidden;
+  overflow-y:visible;
 }
 
 /* Title */
@@ -79,9 +79,9 @@ main{
   background-color: rgb(255, 255, 255);
   position: relative;
   width: auto;
-  height: 100%;
+  height: auto;
   min-height: 95%;
-  overflow-y: scroll;
+  /*overflow-y: scroll;*/
   padding: 0 20px 40px 20px;
   margin: 0;
 }
